--- a/app/globals.css
+++ b/app/globals.css
@@ -5,13 +5,8 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --btn-color: #6369d1;
+  --btn-bg: #f2f3fa;
 }
 
 body {
@@ -20,8 +15,128 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
+.padding-inline{
+  padding-inline: 8rem;
+}
+
 @layer utilities {
   .text-balance {
     text-wrap: balance;
   }
 }
+
+.enquiryForm{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 1.5rem;
+}
+
+.inputBlock>input,.inputBlock>textarea{
+  width: 100%;
+  margin-top: 0.5rem;
+  outline: none;
+  border: none;
+  border: 1px solid #dddddd;
+  padding: 12px;
+  background-color: #fafafa;
+  border-radius: 2px;
+}
+
+.inputBlock>textarea{
+  height: 130px;
+}
+
+.inputBlock label{
+  font-weight: 700;
+  font-size: 14px;
+}
+
+.inputBlock span{
+  color: red;
+}
+
+.inputBlock:nth-child(5),.inputBlock:nth-child(3),.inputBlock:nth-child(4){
+  grid-column: 1/3;
+  
+}
+
+.btn{
+  padding: 0.75rem 0;
+  font-weight: 600;
+  font-size: 18px;
+  color: #fff;
+  width: 100%;
+}
+
+@media screen and (max-width:1024px) {
+  .enquiryForm>div:last-child{
+    grid-column: 1/3;
+    display: flex;
+    justify-content: space-between;
+    margin-top: 1.5rem;
+  }
+
+  .padding-inline{
+    padding-inline: 2rem;
+  }
+}
+
+.slick-prev{
+  left: 30px;
+  z-index: 10;
+}
+
+.slick-next{
+  right: 30px;
+  z-index: 10;
+}
+
+.nav_toggle{
+  width: 50px;
+  height: 50px;
+  display: flex;
+  border: 1px solid #d3d3d3;
+  cursor: pointer;
+  position: relative;
+}
+
+.toggle{
+  width: 80%;
+  height: 5px;
+  background-color: black;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%,-50%);
+  transition: .3s ease;
+  border-radius: 4px;
+}
+
+.toggle:nth-child(1){
+  top: 25%;
+}
+
+.toggle:nth-child(3){
+  top: 75%;
+}
+
+.nav_toggle.active .toggle:nth-child(1){
+  top: 50%;
+  transform: translate(-50%,-50%) rotate(45deg);
+}
+
+.nav_toggle.active .toggle:nth-child(2){
+  opacity: 0;
+}
+
+.nav_toggle.active .toggle:nth-child(3){
+  top: 50%;
+  transform: translate(-50%,-50%) rotate(-45deg);
+}
+
+@media screen and (max-width:680px) {
+  .padding-inline{
+    padding-inline: 1rem;
+  }
+}
+
